@@ -3,6 +3,9 @@
 	* src/SDCCpeeph.c (labelIsUncondJump): also search backwards
 	* src/mcs51/peeph.def: added rules 257.a-i for jump-to-jump optimization,
 	  added	rules 259.c-f to remove dead jumps, implements RFE 491
+	* src/SDCCerr.c,
+	* src/SDCCerr.h: changed W_UNKNOWN_FEXT to E_UNKNOWN_FEXT
+	* src/SDCCmain.c (processFile): also accept .h sources, implement RFE 460
 
 2016-03-12 Ben Shi <powerstudio1st AT 163 DOT com>
 
